# android_training

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/datasets/: Readme.txt  bnc.hsf  conrod.hsf
app/src/main/assets/fonts/: Readme.txt
app/src/main/assets/materials/: Readme.txt
app/src/main/cpp/: CMakeLists.txt  MobileApp.cpp  MobileApp.h  MobileSurface.cpp  MobileSurface.h  UserMobileSurface.cpp  UserMobileSurface.h  dprintf.h
app/src/main/cpp/JNI/: AndroidMobileSurfaceViewJNI.cpp  AndroidUserMobileSurfaceViewJNI.cpp  JNIHelpers.h  MobileAppJNI.cpp  OnLoadJNI.cpp  jpaths.h
app/src/main/cpp/include/: hoops_license.cs  hoops_license.h  hps.h  sprk.h  sprk_exchange.h  sprk_exchange_parasolid.h  sprk_hca.h  sprk_ops.h  sprk_parasolid.h  sprk_publish.h
app/src/main/cpp/operators/: sprk_annotation_op.cpp  sprk_construct_rectangle_op.cpp  sprk_cutting_section_op.cpp  sprk_exchange_common_measurement_op.cpp  sprk_exchange_measurement_op.cpp  sprk_fly_op.cpp  sprk_handles_op.cpp  sprk_highlight_area_op.cpp  sprk_highlight_op.cpp  sprk_markup_op.cpp  sprk_mouse_wheel_op.cpp  sprk_orbit_op.cpp  sprk_pan_op.cpp  sprk_pan_orbit_zoom_op.cpp  sprk_relative_orbit_op.cpp  sprk_select_area_op.cpp  sprk_select_op.cpp  sprk_space_mouse_op.cpp  sprk_space_mouse_op.h  sprk_turntable_op.cpp  sprk_walk_op.cpp  sprk_zoom_box_op.cpp  sprk_zoom_fit_touch_op.cpp  sprk_zoom_op.cpp
app/src/main/java/com/techsoft3d/hps/virtual_training/: AndroidMobileSurfaceView.java  AndroidUserMobileSurfaceView.java  MobileApp.java  MobileSurfaceActivity.java
app/src/main/res/layout/: activity_main.xml  user_code.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
sip/: sip.py  tpl-AndroidUserMobileSurfaceView.java.txt  tpl-MobileApp.java.txt  tpl-MobileAppJNI.cpp.txt  tpl-actionsJNI.cpp.txt  tpl-javaMethod.java.txt  tpl-jnifunction-static.cpp.txt  tpl-jnifunction.cpp.txt
